# dataaudit-tool

./: README.md
dataaudit/: README.md  pyproject.toml
dataaudit/dataaudit/: __init__.py  core.py  report.py
dataaudit/dataaudit_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
