[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataaudit-tool"  # change if needed
version = "0.1.1"
description = "Automated data quality audit tool for CSV files and DataFrames"
readme = "README.md"
requires-python = ">=3.8"

authors = [
  { name="Usman Ahmad", email="musmanahmad78@gmail.com" }
]

dependencies = [
  "pandas>=1.3",
  "numpy>=1.21",
  "scipy>=1.7",
  "fpdf2>=2.7"
]

keywords = ["data", "audit", "eda", "cleaning", "preprocessing", "machine learning"]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
Homepage = "https://github.com/Usmana74/dataaudit"